--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TowerStats - Statistiques TowerFall Ascension</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <style>
-        {CSS_CONTENT}
+{CSS_CONTENT}
     </style>
 </head>
 
