--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <img src="/images/green-portrait-selected.png" alt="Green Character" class="header-character left">
             <img src="/images/altOrange-portrait-selected.png" alt="Orange Character" class="header-character left">
         </div>
-        <h1>🏹 TOWERSTATS 🏹</h1>
+        <h1><span class="title-emoji">🏹</span> TOWERSTATS <span class="title-emoji">🏹</span></h1>
         <div class="header-characters">
             <img src="/images/purple-portrait-selected.png" alt="Purple Character" class="header-character right">
             <img src="/images/white-portrait-selected.png" alt="White Character" class="header-character right">
